# max

./: .clang-tidy  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  console.py  pyproject.toml
.github/ISSUE_TEMPLATE/: CODEOWNERS  doc_issue.yaml  magic_cli_issue.yaml  max_bug_report.yaml  max_feature_request.yaml  modular_cli_issue.yaml
examples/: README.md  console.py
examples/custom_ops/: README.md  addition.py  mandelbrot.py  mojoproject.toml
examples/custom_ops/kernels/: __init__.mojo  add_one_custom.mojo  mandelbrot.mojo
examples/extensibility/: README.md  max-graph.mojo  max_graph.mojo  onnx-inference.py  onnx-model.py  onnx_det.py  requirements.txt
examples/extensibility/custom_ops/: __init__.mojo  det.mojo  gelu.mojo  python_utils.mojo
examples/graph-api/: README.md  environment.yml  eval_pipeline.🔥  inspect-gguf.🔥  mojoproject.toml  pixi.toml  requirements.txt  run_pipeline.🔥  serve_pipeline.🔥
examples/graph-api/basics/: README.md  basic.🔥
examples/graph-api/getting-started/: README.md  basic.🔥
examples/graph-api/llama2/: .gitignore  README.md  quickrun.sh  run.sh  run.🔥  setup.sh
examples/graph-api/pipelines/: README.md
examples/graph-api/python/addition/: pyproject.toml
examples/graph-api/python/addition/max_ops/: addition.py
examples/graph-api/test/: test_heap.mojo
examples/graph-api/weights/: gguf.🔥  llama2checkpoint.🔥
examples/gui/: .gitignore  README.md  find-max.py  home.py  mojoproject.toml  pipelines  pixi.toml  pyproject.toml  shared.py  yoloconstants.py
examples/gui/.streamlit/: config.toml
examples/gui/pages/: bert.py  llama3.py  llama3_1.py  rag.py  stable-diffusion.py  yolo.py
examples/gui/ragdata/: mojo_functions.txt
examples/inference/: README.md
examples/inference/bert-c-tensorflow/: .gitignore  README.md  download-model.py  main.c  post-process.py  requirements-graviton.txt  requirements.txt  run.sh
examples/inference/bert-c-torchscript/: .gitignore  CMakeLists.txt  README.md  download-model.py  environment.yml  main.c  mojoproject.toml  pixi.toml  post-process.py  pre-process.py  requirements.txt  run.sh
examples/inference/bert-mojo-torchscript/: README.md  environment.yml  mojoproject.toml  pixi.toml  requirements.txt  run.sh  run.🔥  simple-inference.🔥  simple_inference.🔥
examples/inference/bert-python-torchscript/: .gitignore  README.md  config.pbtxt  deploy.sh  download-model.py  environment.yml  pixi.toml  pyproject.toml  requirements.txt  run.sh  simple-inference.py  triton-inference.py
examples/inference/mistral7b-python-onnx/: README.md  download-model.py  environment.yml  generate-text.py  pixi.toml  pyproject.toml  requirements.txt  run.sh
examples/inference/performance-showcase/: README.md  requirements.txt  run.py  run_pt.py
examples/inference/resnet50-python-tensorflow/: .gitignore  README.md  deploy.sh  download-model.py  requirements-graviton.txt  requirements.txt  run.sh  simple-inference.py  triton-inference.py
examples/inference/resnet50-python-torchscript/: README.md  download-model.py  environment.yml  pixi.toml  pyproject.toml  requirements.txt  run.sh  simple-inference.py
examples/inference/roberta-mojo-tensorflow/: README.md  requirements.txt  run.sh  simple-inference.py  simple-inference.🔥
examples/inference/roberta-python-tensorflow/: README.md  deploy.sh  download-model.py  requirements-graviton.txt  requirements.txt  run.sh  simple-inference.py  triton-inference.py
examples/inference/stable-diffusion-mojo-onnx/: README.md  mojoproject.toml  pixi.toml  python_utils.🔥  requirements.txt  run.sh  scheduler.🔥  (+2 more)
examples/inference/yolo-python-onnx/: .gitignore  README.md  constants.py  download-model.py  pixi.toml  pyproject.toml  requirements.txt  run.sh  segment-webcam.py  segment.py
examples/models/: README.md
examples/notebooks/: .gitignore  README.md  environment.yml  gemma2b-python-onnx.ipynb  mistral7b-python-onnx.ipynb  openclip-mojo-onnx-client.ipynb  openclip-mojo-onnx-server.ipynb  pixi.toml  roberta-mojo-pytorch-client.ipynb  roberta-mojo-pytorch-server.ipynb  roberta-python-pytorch.ipynb  roberta-python-tensorflow.ipynb
examples/performance-showcase/: README.md  common.py  generate_input.py  printouts.py  requirements-graviton.txt  requirements.txt  run.py  run_max.py  run_pt.py  run_tf.py
examples/tools/: README.md  pixi.toml
examples/tools/visualize-pytorch/: .gitignore  pyproject.toml  requirements.txt  run.sh
inference/bert-c-tensorflow/: download-model.py  generate-inputs.py  main.c  requirements.txt  run.sh
inference/bert-c-torchscript/: download-model.py
inference/performance-showcase/: README.md  common.py  run_max.py
inference/resnet50-python-tensorflow/: README.md  config.pbtxt  deploy.sh  download-model.py
inference/roberta-python-tensorflow/: .gitignore  README.md
inference/stablediffusion-mojo-tensorflow/: README.md  requirements.txt
inference/stablediffusion-python-tensorflow/: .gitignore  run.sh  text-to-image.py
notebooks/: README.md
pipelines/benchmarking/: .gitignore  README.md  benchmark_serving.py  pyproject.toml  requirements.txt
pipelines/python/: README.md  pipelines.py  pixi.toml  pyproject.toml  requirements.txt
tools/: README.md
tools/benchmark-pytorch/: run.sh
tools/visualize-tensorflow/: run.sh
tutorials/: README.md
tutorials/deploy-aws-kubernetes/: README.md  client.py
tutorials/deploy-cloudformation-sagemaker/: README.md  client.py
tutorials/hello-magic/: hello.mojo  main.py  mojoproject.toml  test_main.py
tutorials/max-graph-api/: .gitignore  README.md  add.mojo  matmul.mojo  mnist.mojo  mnist.py  mojoproject.toml
tutorials/max-graph-python/: README.md  pyproject.toml
tutorials/max-graph-python/src/max_ops/: addition.py
tutorials/max_ops/: pyproject.toml
tutorials/run-onnx-with-python/: .gitignore  README.md  download-model.py  pixi.toml  pyproject.toml  requirements.txt  run.py
tutorials/run-onnx-with-python/src/onnx_tutorial/: __init__.py
tutorials/run-torchscript-with-python/: .gitignore  README.md  download-model.py  pyproject.toml  run.py
(+368 files in other folders)
