[project]
name = "max_gui"
version = "0.1.0"
description = "MAX Examples Streamlit GUI"
requires-python = "==3.11"
dependencies = [
    "accelerate",
    "diffusers",
    "ftfy",
    "numpy<2.0",
    "openai",
    "optimum[onnxruntime]",
    "pillow",
    "psutil",
    "streamlit",
    "streamlit-webrtc",
    "torch==2.2.2",
    "transformers",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64", "linux-aarch64"]

[tool.pixi.tasks]
gui = "streamlit run home.py"
setup = "python find-max.py"
