[project]
name = "max_gui"
version = "0.1.0"
description = "MAX Examples Streamlit GUI"
requires-python = "==3.11"
dependencies = [
    "accelerate",
    "diffusers",
    "ftfy",
    "networkx",
    "numpy<2.0",
    "openai",
    "optimum[onnxruntime]",
    "onnxruntime",
    "onnxslim==0.1.31",
    "opencv-python",
    "pillow",
    "psutil",
    "streamlit",
    "streamlit-webrtc",
    "torch==2.4.0",
    "ultralytics",
    "transformers",
    "chromadb==0.5.3",
    "watchdog",
    "fastembed==0.3.2",
    "llama-index==0.10.52",
    "protobuf==3.20.3",
    "nbconvert",
    "docx2txt",
    "html2text",
    "EbookLib",
    "ipython",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64", "linux-aarch64"]

[tool.pixi.dependencies]
openblas = "*"

[tool.pixi.tasks]
gui = "streamlit run home.py"
setup = "python find-max.py"
