[project]
dependencies = []
description = "Tutorial: Run an ONNX model with Python"
name = "onnx-tutorial"
requires-python = ">=3.9,<3.13"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["pytorch", "conda-forge", "https://conda.modular.com/max/"]
platforms = ["linux-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
onnx_tutorial = { path = ".", editable = true }

[tool.pixi.dependencies]
max = "~=24.5"
pytorch = "==2.4.0"
numpy = "<2.0"
onnx = "==1.16.0"
transformers = "==4.40.1"
datasets = "==2.18"
pillow = "==10.3.0"
libjpeg-turbo = { version = "3.0.0", channel = "conda-forge" }

[tool.pixi.feature.test.tasks]
test = "python3 download-model.py && python3 run.py"

[tool.pixi.environments]
test = { features = ["test"] }

[tool.pixi.feature.test.dependencies]
python-dateutil = "==2.9.0"
