[project]
dependencies = []
description = "Tutorial: Run a TorchScript model with Python"
name = "torchscript-tutorial2"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["pytorch", "conda-forge", "https://conda.modular.com/max-nightly/"]
platforms = ["linux-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
torchscript_tutorial2 = { path = ".", editable = true }

[tool.pixi.dependencies]
python = ">=3.9,<3.13"
max = "~=24.5"
pytorch = "==2.4.0"
transformers = "==4.40.1"

[tool.pixi.feature.test.tasks]
test = "python3 download-model.py && python3 run.py"

[tool.pixi.environments]
test = { features = ["test"] }

[tool.pixi.feature.test.pypi-dependencies]
python-dateutil = "==2.9.0"
