[project]
name = "mistral7b-python-onnx"
version = "1.0.0"
description = "MAX Examples"
requires-python = ">=3.9,<3.13"
authors = [{ name = "Modular", email = "hello@modular.com" }]
dependencies = [
    "networkx==3.1",
    "torch==2.4.0",
    "transformers==4.40.1",
    "onnx==1.16.0",
    "onnxruntime==1.17.3",
    "optimum==1.19.1",
    "setuptools==69.5.1",
    "huggingface_hub[cli]==0.23.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pixi.project]
channels = ["conda-forge", "https://conda.modular.com/max-nightly"]
platforms = ["osx-arm64", "linux-aarch64", "linux-64"]

[tool.pixi.pypi-dependencies]
mistral7b-python-onnx = { path = ".", editable = true }

[tool.pixi.dependencies]
max = ">=24.4.0,<25"
numpy = "<2.0"
