[project]
name = "visualize-pytorch"
version = "1.0.0"
description = "MAX Examples"
requires-python = ">=3.9,<3.13"
authors = [{ name = "Modular", email = "hello@modular.com" }]
dependencies = ["torch==2.4.0"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pixi.project]
channels = ["conda-forge", "https://conda.modular.com/max-nightly"]
platforms = ["osx-arm64", "linux-aarch64", "linux-64"]

[tool.pixi.pypi-dependencies]
visualize-pytorch = { path = ".", editable = true }

[tool.pixi.dependencies]
max = ">=24.4.0,<25"
numpy = "<2.0"
