[project]
authors = [{name = "rachfop", email = "pat@modular.com"}]
dependencies = []
description = "Adds two numbers."
name = "addition"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge", "https://conda.modular.com/max"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
addition = { path = ".", editable = true }

[tool.pixi.tasks]
addition = "python max_ops/addition.py"
mypy = "mypy . --config .mypy.ini"
black = "black max_ops/addition.py tests/test_addition.py"
isort = "isort max_ops/addition.py tests/test_addition.py"


[tool.pixi.dependencies]
max = ">=24.5.0,<25"
black = ">=24.10.0,<25"
isort = ">=5.13.2,<6"
mypy = ">=1.12.0,<2"
numpy = ">=1.26.4,<2"
pytest = ">=8.3.3,<9"
